crm/web/service.yaml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: crm-web
  labels:
    app: crm
spec:
  # Choose how to expose your service
  type: NodePort
  ports:
    # The port number to expose the service
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30012

  # Pod to route service traffic
  selector:
    app: crm
    name: crm-web
